# CarDashboard

./: CMakeLists.txt  Tastenbelegung.txt  auto.cpp  auto.h  bremse.cpp  bremse.h  drehzahl.cpp  drehzahl.h  gas.cpp  gas.h  kilometerstand.cpp  kilometerstand.h  km_Stand.txt  logik.cpp  logik.h  main.cpp  main.qml  res.qrc  speed.cpp  speed.h  tempo.cpp  tempo.h
